--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@sefr/test",
   "version": "1.1.0",
   "description": "Enhance testing libraries by adding a way to easily stub class",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "scripts": {
     "build": "tsc",
     "prepare": "npm test && npm run build",
