--- a/package.json
+++ b/package.json
@@ -26,21 +26,21 @@
   },
   "homepage": "https://github.com/Sefrancois/test#readme",
   "dependencies": {
-    "@salesforce/ts-sinon": "^1.4.5",
-    "@types/chai": "^4.3.4",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.18",
-    "@types/sinon": "^10.0.13",
-    "@types/sinon-chai": "^3.2.9",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^10.2.0",
-    "sinon": "^15.0.1",
-    "sinon-chai": "^3.7.0",
-    "typescript": "^4.9.4"
+    "@salesforce/ts-sinon": "~1.4.6",
+    "@types/chai": "~4.3.4",
+    "@types/chai-as-promised": "~7.1.5",
+    "@types/mocha": "~10.0.1",
+    "@types/node": "~18.14.0",
+    "@types/sinon": "~10.0.13",
+    "@types/sinon-chai": "~3.2.9",
+    "chai": "~4.3.7",
+    "chai-as-promised": "~7.1.1",
+    "mocha": "~10.2.0",
+    "sinon": "~15.0.1",
+    "sinon-chai": "~3.7.0",
+    "typescript": "~4.9.4"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1"
+    "ts-node": "~10.9.1"
   }
 }
