chore(dependencies): update dependencies
Release-As: 1.2.4

--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "chai": "~4.3.7",
     "chai-as-promised": "~7.1.1",
     "mocha": "~10.2.0",
-    "sinon": "~15.0.2",
+    "sinon": "^15.1.0",
     "sinon-chai": "~3.7.0",
-    "typescript": "~4.9.4"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "ts-node": "~10.9.1"
